--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build":  "next build -eslint",
     "start": "next start",
     "lint": "next lint"
   },
