--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     
     "dev": "next dev --turbopack",
-    "build":  "next build -eslint",
+    "build":  "next build ",
     "start": "next start",
     "lint": "next lint"
   },
