--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    
     "dev": "next dev --turbopack",
-    "build":  "next build ",
+    "build": "next build ",
     "start": "next start",
     "lint": "next lint"
   },
@@ -18,7 +17,7 @@
     "dayjs": "^1.11.13",
     "filesize": "^10.1.6",
     "lucide-react": "^0.454.0",
-    "next": "15.0.2",
+    "next": "^15.0.2",
     "next-cloudinary": "^6.16.0",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028"
